<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="10dp"
    tools:context=".Ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvProceedAsGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:drawablePadding="10dp"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/guest_proceed"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_proceed" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/app_logo"
            android:contentDescription="@string/app_moto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/user_login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:hint="@string/email_placeholder"
                android:textColorHint="@color/colorPrimary"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidthFocused="3dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimary"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@color/white"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:hint="@string/password_placeholder"
                android:textColorHint="@color/colorPrimary"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidthFocused="3dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimary"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/colorPrimary"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:elevation="50dp"
            android:padding="2dp"
            android:text="@string/login_button_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvToSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:text="@string/dont_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <ProgressBar
            android:id="@+id/loginProgressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:indeterminate="false"
            android:indeterminateTint="@color/white"
            android:progressDrawable="@color/white"
            android:visibility="gone" />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            ads:adSize="BANNER"
            android:layout_gravity="bottom|center"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>

<!--        ca-app-pub-8763169533349627/9562309458-->

    </LinearLayout>

</ScrollView>