<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="8dp"
        android:padding="10dp"
        android:id="@+id/cvJumiaItem" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/app_logo"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:contentDescription="Result item image placeholder" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/productImageView"
                android:padding="5dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/product_name_placeholder" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/product_price_placeholder"
                android:textSize="15sp"
                android:textColor="#000000"
                android:layout_below="@id/productName" />

            <TextView
                android:id="@+id/tvInKsh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="9dp"
                android:paddingEnd="0dp"
                android:layout_margin="1dp"
                android:text="@string/product_price_placeholder"
                android:textSize="13sp"
                android:textColor="@color/darkGrey"
                android:layout_below="@id/productPrice" />

            <TextView
                android:id="@+id/productRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvInKsh"
                android:text="@string/product_rating_placeholder"
                android:padding="5dp"
                android:layout_margin="3dp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>